removed sun classes dependency added latest commons-codec 1.4